--- a/v0.1/index-en.html
+++ b/v0.1/index-en.html
@@ -52,8 +52,8 @@ function loadTOC(){
 <div class="container">
 <div class="head">
 <div style="float:right">language <a href="index-en.html"><b>en</b></a> </div>
+<img src="https://madhawap.github.io/human-device-interaction-ontology/v0.1/images/underConstructionSign.png" alt="Italian Trulli">
 <h1>Human Device Gesture Interaction Ontology </h1>
-
 
 <dl>
 <dt>This version:</dt>
