--- a/v0.1/index-en.html
+++ b/v0.1/index-en.html
@@ -94,8 +94,7 @@ This is a place holder text for the introduction. The introduction should briefl
 <tr><td><b>xsd</b></td><td>&lt;http://www.w3.org/2001/XMLSchema&gt;</td></tr>
 <tr><td><b>skos</b></td><td>&lt;http://www.w3.org/2004/02/skos/core&gt;</td></tr>
 <tr><td><b>rdfs</b></td><td>&lt;http://www.w3.org/2000/01/rdf-schema&gt;</td></tr>
-<tr><td><b>hdgi</b></td><td>&lt;https://w3id.org/hdgi&gt;</td></tr>
-<tr><td><b>default namespace</b></td><td>&lt;https://w3id.org/hdgi&gt;</td></tr>
+<tr><td><b>default namespace</b></td><td>&lt;https://w3id.org/hdgi#&gt;</td></tr>
 </tbody>
 </table>
 </div>
