--- a/v0.1/index-en.html
+++ b/v0.1/index-en.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
- <link rel="stylesheet" href="resources/primer.css" media="screen" />    <link rel="stylesheet" href="resources/rec.css" media="screen" />    <link rel="stylesheet" href="resources/extra.css" media="screen" />    <link rel="stylesheet" href="resources/owl.css" media="screen" />    <title>Human Device Gesture Interaction Ontology </title>
+ <link rel="stylesheet" href="resources/primer.css" media="screen" />    <link rel="stylesheet" href="resources/rec.css" media="screen" />    <link rel="stylesheet" href="resources/extra.css" media="screen" />    <link rel="stylesheet" href="resources/owl.css" media="screen" />    <title>Human Device Gesture Interaction Ontology</title>
 
 
 <!-- SCHEMA.ORG METADATA -->
-<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"https://w3id.org/hdgi#","image":"http://vowl.visualdataweb.org/webvowl/#iri=https://w3id.org/hdgi#","name":"Human Device Gesture Interaction Ontology ", "headline":"Gesture-controlled interfaces are becoming popular with the recent advent of IoT systems. Especially in the current automobiles, smart homes, computer games and AR/VR applications, gestures have become prevalent due to its accessibility to everyone. Designers, producers and vendors integrating gesture interfaces into their products have also increased in numbers, giving rise to a greater variation of standards in utilizing them. This could confuse the users who are accustomed to a set of conventional controls. This ontology formally describes human gestures and facilitate automated reasoning tasks which help systems to map gestures to corresponding affordances. This will be helpful for standardizing gesture designing and to bring interoperability across gesture-controlled interfaces.", "datePublished":"Tue Jul 14 15:19:15 AEST 2020", "license":"https://github.com/madhawap/human-device-gesture-interaction-ontology/blob/master/LICENSE", "author":[{"@type":"Person","name":"Madhawa Perera"},{"@type":"Person","name":"Armin Haller"},{"@type":"Person","name":"Sergio J. Rodríguez Méndez"},{"@type":"Person","name":"Matt Adcock"}]}</script>
+<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"https://w3id.org/hdgi#","image":"http://vowl.visualdataweb.org/webvowl/#iri=https://w3id.org/hdgi#","name":"Human Device Gesture Interaction Ontology", "headline":"Gesture-controlled interfaces are becoming popular with the recent advent of IoT systems. Especially in the current automobiles, smart homes, computer games and AR/VR applications, gestures have become prevalent due to its accessibility to everyone. Designers, producers and vendors integrating gesture interfaces into their products have also increased in numbers, giving rise to a greater variation of standards in utilizing them. This could confuse the users who are accustomed to a set of conventional controls. This ontology formally describes human gestures and facilitate automated reasoning tasks which help systems to map gestures to corresponding affordances. This will be helpful for standardizing gesture designing and to bring interoperability across gesture-controlled interfaces.", "datePublished":"Tue Jul 14 19:30:20 AEST 2020", "version":"0.1", "license":"https://github.com/madhawap/human-device-gesture-interaction-ontology/blob/master/LICENSE", "author":[{"@type":"Person","name":"Madhawa Perera"},{"@type":"Person","name":"Armin Haller"},{"@type":"Person","name":"Sergio J. Rodríguez Méndez"},{"@type":"Person","name":"Matt Adcock"}]}</script>
 
 <script src="resources/jquery.js"></script>
 <script src="resources/marked.min.js"></script>
@@ -52,7 +52,7 @@ function loadTOC(){
 <div class="container">
 <div class="head">
 <div style="float:right">language <a href="index-en.html"><b>en</b></a> </div>
-<h1>Human Device Gesture Interaction Ontology </h1>
+<h1>Human Device Gesture Interaction Ontology</h1>
 
 
 <dl>
@@ -60,15 +60,15 @@ function loadTOC(){
 <dd><a href="https://w3id.org/hdgi">https://w3id.org/hdgi</a></dd>
 <dt>Latest version:</dt>
 <dd><a href="https://w3id.org/hdgi">https://w3id.org/hdgi</a></dd>
-<!-- <dt>Previous version:</dt>
-<dd><a href="https://w3id.org/hdgi/v0.1">https://w3id.org/hdgi/v0.1</a></dd> -->
+<dt>Revision:</dt>
+<dd>0.1</dd>
 <dt>Authors:</dt>
 <dd>Madhawa Perera, (<a href="https://cecs.anu.edu.au/">Australian National University</a>)</dd><dd>Armin Haller, (<a href="https://cecs.anu.edu.au/">Australian National University</a>)</dd><dd>Sergio J. Rodríguez Méndez, (<a href="https://cecs.anu.edu.au/">Australian National University</a>)</dd><dd>Matt Adcock, (<a href="https://www.csiro.au/">CSIRO</a>)</dd>
 
-<dt>Download serialization:</dt><dd><span><a href="ontology.json" target="_blank"><img src="https://img.shields.io/badge/Format-JSON_LD-blue.svg" alt="JSON-LD" /></a> </span><span><a href="ontology.xml" target="_blank"><img src="https://img.shields.io/badge/Format-RDF/XML-blue.svg" alt="RDF/XML" /></a> </span><span><a href="ontology.nt" target="_blank"><img src="https://img.shields.io/badge/Format-N_Triples-blue.svg" alt="N-Triples" /></a> </span><span><a href="ontology.ttl" target="_blank"><img src="https://img.shields.io/badge/Format-TTL-blue.svg" alt="TTL" /></a> </span></dd><dt>License: </dt><dd><a href="https://github.com/madhawap/human-device-gesture-interaction-ontology/blob/master/LICENSE" target="_blank"><img src="https://img.shields.io/badge/License-MIT-blue.svg" alt="https://github.com/madhawap/human-device-gesture-interaction-ontology/blob/master/LICENSE" /></a>
+<dt>Download serialization:</dt><dd><span><a href="ontology.json" target="_blank"><img src="https://img.shields.io/badge/Format-JSON_LD-blue.svg" alt="JSON-LD" /></a> </span><span><a href="ontology.xml" target="_blank"><img src="https://img.shields.io/badge/Format-RDF/XML-blue.svg" alt="RDF/XML" /></a> </span><span><a href="ontology.nt" target="_blank"><img src="https://img.shields.io/badge/Format-N_Triples-blue.svg" alt="N-Triples" /></a> </span><span><a href="ontology.ttl" target="_blank"><img src="https://img.shields.io/badge/Format-TTL-blue.svg" alt="TTL" /></a> </span></dd><dt>License: </dt><dd><a href="https://github.com/madhawap/human-device-gesture-interaction-ontology/blob/master/LICENSE" target="_blank"><img src="https://img.shields.io/badge/License-https://github.com/madhawap/human_device_gesture_interaction_ontology/blob/master/LICENSE-blue.svg" alt="https://github.com/madhawap/human-device-gesture-interaction-ontology/blob/master/LICENSE" /></a>
 </dd><dt>Visualization:</dt><dd><a href="webvowl/index.html#" target="_blank"><img src="https://img.shields.io/badge/Visualize_with-WebVowl-blue.svg" alt="Visualize with WebVowl" /></a></dd>
 <!-- <dt>Evaluation:</dt><dd><a href="OOPSEvaluation/OOPSeval.html#" target="_blank"><img src="https://img.shields.io/badge/Evaluate_with-OOPS! (OntOlogy Pitfall Scanner!)-blue.svg" alt="Evaluate with OOPS!" /></a></dd> --><dt>Cite as:</dt>
-<dd> Retrieved from: https://w3id.org/hdgi</dd>
+<dd>Human Device Gesture Interaction Ontology. Revision: 0.1. Retrieved from: https://w3id.org/hdgi</dd>
 </dl>
 
 <a href="provenance/provenance-en.html" target="_blank">Provenance of this page</a><hr/>
@@ -93,13 +93,20 @@ The HDGI ontology aims to model the pose and/or movement of human upper limbs th
 <caption> <a href="#ns"> Table 1</a>: Namespaces used in the document </caption>
 <tbody>
 <!-- <tr><td><b>https://w3id.org/hdgi#</b></td><td>&lt;https://w3id.org/hdgi#&gt;</td></tr> -->
+<tr><td><b>schema</b></td><td>&lt;https://schema.org&gt;</td></tr>
+<tr><td><b>w3id-org</b></td><td>&lt;https://w3id.org&gt;</td></tr>
+<tr><td><b>ns</b></td><td>&lt;http://creativecommons.org/ns&gt;</td></tr>
 <tr><td><b>owl</b></td><td>&lt;http://www.w3.org/2002/07/owl&gt;</td></tr>
-<tr><td><b>rdf</b></td><td>&lt;http://www.w3.org/1999/02/22-rdf-syntax-ns&gt;</td></tr>
 <tr><td><b>xsd</b></td><td>&lt;http://www.w3.org/2001/XMLSchema&gt;</td></tr>
 <tr><td><b>skos</b></td><td>&lt;http://www.w3.org/2004/02/skos/core&gt;</td></tr>
 <tr><td><b>rdfs</b></td><td>&lt;http://www.w3.org/2000/01/rdf-schema&gt;</td></tr>
 <tr><td><b>hdgi</b></td><td>&lt;https://w3id.org/hdgi&gt;</td></tr>
+<tr><td><b>master</b></td><td>&lt;https://github.com/madhawap/human-device-gesture-interaction-ontology/blob/master&gt;</td></tr>
+<tr><td><b>rdf</b></td><td>&lt;http://www.w3.org/1999/02/22-rdf-syntax-ns&gt;</td></tr>
+<tr><td><b>terms</b></td><td>&lt;http://purl.org/dc/terms&gt;</td></tr>
+<tr><td><b>vann</b></td><td>&lt;http://purl.org/vocab/vann&gt;</td></tr>
 <tr><td><b>default namespace</b></td><td>&lt;https://w3id.org/hdgi&gt;</td></tr>
+<tr><td><b>dc</b></td><td>&lt;http://purl.org/dc/elements/1.1&gt;</td></tr>
 </tbody>
 </table>
 </div>
@@ -108,7 +115,7 @@ The HDGI ontology aims to model the pose and/or movement of human upper limbs th
 
 
 <!--OVERVIEW SECTION-->
-    <div id="overview"><h2 id="overv" class="list">Human Device Gesture Interaction Ontology : Overview <span class="backlink"> back to <a href="#toc">Top</a></span></h2>
+    <div id="overview"><h2 id="overv" class="list">Human Device Gesture Interaction Ontology: Overview <span class="backlink"> back to <a href="#toc">Top</a></span></h2>
 <span class="markdown">
 This ontology has the following classes and properties.</span>
 <h4>Classes</h4>
@@ -729,7 +736,7 @@ This ontology has the following classes and properties.</span>
 
 
 <!--DESCRIPTION SECTION-->
-    <!-- <div id="description"><h2 id="desc" class="list">Human Device Gesture Interaction Ontology : Description <span class="backlink"> back to <a href="#toc">Top</a></span></h2>
+    <!-- <div id="description"><h2 id="desc" class="list">Human Device Gesture Interaction Ontology: Description <span class="backlink"> back to <a href="#toc">Top</a></span></h2>
 <span class="markdown">
 This is a placeholder text for the description of your ontology. The description should include an explanation and a diagram explaining how the classes are related, examples of usage, etc.</span>
 
@@ -737,8 +744,8 @@ This is a placeholder text for the description of your ontology. The description
 
 
 <!--CROSSREF SECTION-->
-   <div id="crossref"><h2 id="crossreference" class="list">Cross reference for Human Device Gesture Interaction Ontology  classes, properties and dataproperties <span class="backlink"> back to <a href="#toc">Top</a></span></h2>
-This section provides details for each class and property defined by Human Device Gesture Interaction Ontology .
+   <div id="crossref"><h2 id="crossreference" class="list">Cross reference for Human Device Gesture Interaction Ontology classes, properties and dataproperties <span class="backlink"> back to <a href="#toc">Top</a></span></h2>
+This section provides details for each class and property defined by Human Device Gesture Interaction Ontology.
 <div id="classes">
    <h3 id="classes-headline" class="list">Classes</h3>
    <ul class="hlist">
@@ -4566,10 +4573,10 @@ Location of the (0,0,0) postion related to the given coordinates.</span>
 
 
 <!--REFERENCES SECTION-->
-  <div id="references">
+  <!-- <div id="references">
 <h2 id="ref" class="list">References <span class="backlink"> back to <a href="#toc">Top</a></span></h2>
 <span class="markdown">
-Add your references here. It is recommended to have them as a list.</span>
+Add your references here. It is recommended to have them as a list.</span> -->
 
 </div>
 <div id="acknowledgements">
